fixed the text align of heading

--- a/src/styles/blocks/section.scss
+++ b/src/styles/blocks/section.scss
@@ -42,6 +42,7 @@
     &--follow {
       color: $text-on-dark;
       margin-bottom: 20px;
+      text-align: center;
     }
   }
 
